hasil update yoga

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Halaman Kolaborasi Git</title>
 </head>
 <body>
-    <h1>Praktikum 12</h1>
+    <h1>INI HASIL DARI YOGA</h1>
     <p>Ini adalah contoh file index.html dengan total 30 baris.</p>
     <p>File ini digunakan untuk latihan Git branching dan merge.</p>
     <hr>
