merubah baris 3 paragraf (Skema2)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>Tujuan Praktikum</h2>
     <p>1. Memahami cara kerja Git dalam kolaborasi.</p>
     <p>2. Mengetahui cara membuat branch baru.</p>
-    <p>3. Melakukan merge ke branch main.</p>
+    <p>3. mengubah baris paragraf 3</p>
     <p>4. Mengatasi merge conflict.</p>
     <hr>
     <h2>Catatan Tambahan</h2>
