menambahkan paragraf ke 5

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <p>2. Mengetahui cara membuat branch baru.</p>
     <p>3. mengubah baris paragraf 3</p>
     <p>4. Mengatasi merge conflict.</p>
+    <p>5. Membuat paragraf 5</p>
     <hr>
     <h2>Catatan Tambahan</h2>
     <p>Setiap anggota akan menambahkan perubahan pada file ini.</p>
